--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -1,4 +1,4 @@
-<form action='/articles<%= @article.id%>' method="post">
+<form action='/articles/<%= @article.id%>' method="post">
 <h1>Current article</h1>
 <h2><%=@article.title%></h2>
 <p><%=@article.content%></p>
