--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -4,7 +4,7 @@
     <form action="/articles/<%= @article.id %>" method="POST">
       <input id="hidden" type="hidden" name="_method" value="patch">
       <label for "name">Name:</label>
-      <input type="text" id="name" name="name" value="<%= @article.name %>">
+      <input type="text" id="title" name="title" value="<%= @article.title %>">
       <br />
       <label for "content">Content:</label>
       <input type="text" id="content" name="content" value="<%= @article.content %>">
