--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -3,7 +3,7 @@
   <body>
     <form action='/articles' method="POST">
       <label for "name">Name:</label>
-      <input type="text" id="name" name="name">
+      <input type="text" id="title" name="title">
       <br />
       <label for "content">Content:</label>
       <input type="text" id="content" name="content">
