--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -3,8 +3,8 @@
   <body>
     <h1>Articles</h1>
     <% @articles.each do |article| %>
-      <strong><%= article.name %></strong><br />
-      <%= post.content %>
+      <strong><%= article.title %></strong><br />
+      <%= article.content %>
       <br /><br />
     <% end %>
   </body>
