--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <h1><%= @article.name %></h1>
+    <h1><%= @article.title %></h1>
     <p><%= @article.content %></p>
     <br />
-    <form method="POST" action="/posts/<%= @article.id %>/delete">
+    <form method="POST" action="/articles/<%= @article.id %>">
       <input id="hidden" type="hidden" name="_method" value="delete">
       <input type="submit" value="delete">
     </form>
