--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -3,11 +3,11 @@
 <body>
   <form action='/articles' method="POST">
     <label for "title">Title:</label>
-      <input type="text" id="title" value="title">
+      <input type="text" id="title" name="title" value="title">
       <br />
       <br />
       <label for "content">Content:</label>
-      <input type="text" id="content" value="content">
+      <input type="text" id="content" name="content" value="content">
       <br />
       <br />
       <input type="submit" value="submit" id="submit">
